[package]
name = "address_book"
version = "0.3.0"
edition = "2021"
authors = ["Косів Христина kh.kosiv@ukma.edu.ua"]
description = "Інструмент командного рядка для парсингу телефонних номерів, ідентифікаторів, дат та неправильних полів за допомогою Pest у Rust."
license = "MIT"

[dependencies]
anyhow = "1.0"
pest = "2.1"
pest_derive = "2.1"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"